# game-of-life

./: README.md  pom.xml
cpp/: .clang-format  .gitignore  CMakeLists.txt  Taskfile.yml  flake.nix
cpp/src/: main.cpp
cpp/src/gol/: Game.cpp  Game.hpp
haskell/: LICENSE  game-of-life.cabal  package.yaml
haskell/src/: GameOfLife.hs
haskell/test/: GameOfLifeSpec.hs  TestData.hs
java/src/test/java/com/miracoly/gameoflife/: TestData.java
src/main/java/com/miracoly/gameoflife/: Game.java  Position.java
src/test/java/com/miracoly/gameoflife/: GameTest.java
